fixed pubs titles when wrapping text

--- a/static/css/tweaks.css
+++ b/static/css/tweaks.css
@@ -7,7 +7,6 @@
         min-inline-size: 48px !important;
         margin-right: 4px;
         margin-left: 4px;
-        line-height: 48px;
     }
 }
 
